.metals/.reports/metals/2023-10-07/r_scala-toplevel-mtags_10-26-59-273
id: file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala:[21..21) in Input.VirtualFile("file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala", "package components.

")
file://<HOME>/Documents/UnB/Disciplinas/4%C2%BA%20SEMESTRE/TP2/scala-word-count/src/test/scala/components/commands/WordCount_Test.scala:3: error: expected identifier; obtained eof

^